tests/ui/type-alias-impl-trait/escaping-bound-var.stderr
error: higher kinded lifetime bounds on nested opaque types are not supported yet
  --> $DIR/escaping-bound-var.rs:9:25
   |
LL | pub type Foo = impl for<'a> Trait<'a, Assoc = impl Test<'a>>;
   |                         ^^
   |
note: lifetime declared here
  --> $DIR/escaping-bound-var.rs:9:25
   |
LL | pub type Foo = impl for<'a> Trait<'a, Assoc = impl Test<'a>>;
   |                         ^^

error: aborting due to 1 previous error

